# nice

./: .gitignore  index.html  main.py  myapp.spec  pyproject.toml
experimental/: experiment.py
navigation/: menu.py
pages/: about.py  ai.py  geo.py
stac/: arch.drawio  bevcatalog.py  stacviewer.py
stac_catalog/: catalog.json
stac_catalog/geotiff-collection/: collection.json
stac_catalog/geotiff-collection/5116-50/: 5116-50.json
stac_catalog/geotiff-collection/DGM_R250/: DGM_R250.json
stac_catalog/geotiff-collection/DGM_R500/: DGM_R500.json
