[project]
name = "nice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nicegui>=3.3.1",
    "ollama>=0.6.1",
    "pyinstaller>=6.16.0",
    "pystac>=1.14.1",
    "pystac-client>=0.9.0",
    "pywebview>=6.1",
    "rasterio>=1.3.2",
    "requests>=2.32.5",
    "shapely>=2.1.2",
]
